sonar properties updated

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,3 +11,5 @@ sonar.language=java
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
+#Force jacoco coverage to 0% 
+sonar.jacoco.reportMissing.force.zero=true
